--- a/privacy.html
+++ b/privacy.html
@@ -102,7 +102,7 @@
      extension’s release notes.</p>
 
   <h2>10. Contact</h2>
-  <p>Email <a href="mailto:support@deeplookup.ai">support@deeplookup.ai</a>
+  <p>Email <a href="gkarthickkumar1@gmail.com">gkarthickumar1@gmail.com</a>
      with any privacy questions or concerns.</p>
 
   <p><small>&copy; 2025 DeepLookup Labs – All rights reserved.</small></p>
